// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expanded api > "as" prop > changes the rendered element type 1`] = `
<div>
  <span
    class="sc-a b"
  />
</div>
`;

exports[`expanded api > "as" prop > changes the rendered element type when used with attrs 1`] = `
<div>
  <header
    class="sc-a b"
  />
</div>
`;

exports[`expanded api > "as" prop > works with custom components 1`] = `
<div>
  <figure
    class="sc-a b"
  />
</div>
`;

exports[`expanded api > chaining > should merge the options strings 1`] = `
<div>
  <div
    class="dn-2-id-1"
  />
</div>
`;

exports[`expanded api > componentId > should be attached if passed in 1`] = `
<div>
  <div
    class="LOLOMG"
  />
</div>
`;

exports[`expanded api > componentId > should be attached if passed in 2`] = `
<div>
  <div
    class="OMGLOL"
  />
</div>
`;

exports[`expanded api > componentId > should be combined with displayName if both passed in 1`] = `
<div>
  <div
    class="Comp-LOLOMG"
  />
</div>
`;

exports[`expanded api > componentId > should be combined with displayName if both passed in 2`] = `
<div>
  <div
    class="Comp2-OMGLOL"
  />
</div>
`;

exports[`expanded api > componentId > should be generated as "sc" + hash 1`] = `
<div>
  <div
    class="sc-a"
  />
</div>
`;

exports[`expanded api > componentId > should be generated as "sc" + hash 2`] = `
<div>
  <div
    class="sc-b"
  />
</div>
`;

exports[`expanded api > componentId > should be generated from displayName + hash 1`] = `
<div>
  <div
    class="Comp-a"
  />
</div>
`;

exports[`expanded api > componentId > should be generated from displayName + hash 2`] = `
<div>
  <div
    class="Comp2-b"
  />
</div>
`;
